Refactor ensureJVMIsProperlyConfigured() call to JVM class.